[package]
name = "florescence"
version = "0.1.0"
readme = "README.md"

edition = "2021"
authors = [
    "Byron Wasti <dev@byronwasti.com>"
]
categories = ["distributed-systems"]
keywords = ["raft", "crdt", "gossip", "distributed"]
description = "An experimental library exposing hybrid Raft and CRDT primitives."
homepage = "https://github.com/byronwasti/florescence"
license = "MIT OR Apache-2.0"
repository = "https://github.com/byronwasti/florescence"

[dependencies]

[dev-dependencies]

[features]
