[package]
name = "florescence"
version = "0.1.0"
readme = "README.md"

edition = "2024"
authors = [
    "Byron Wasti <dev@byronwasti.com>"
]
categories = ["distributed-systems"]
keywords = ["raft", "crdt", "gossip", "distributed"]
description = "An experimental library exposing hybrid Raft and CRDT primitives."
homepage = "https://github.com/byronwasti/florescence"
license = "MIT OR Apache-2.0"
repository = "https://github.com/byronwasti/florescence"

[dependencies]
bincode = {version = "2.0.1", features = ["serde"] }
bytes = "1.10.0"
http = "1.2.0"
http-body-util = "0.1.2"
hyper = "1.6.0"
hyper-util = "0.1.10"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version="1.43.0", features=["rt-multi-thread", "net"] }
tokio-stream = "0.1.17"
tonic = { version="0.12.3", default-features=false, features=["transport", "router"] }
#tonic = { version="0.12.3" }
tower-service = "0.3.3"
treeclocks = { version="0.6.0", path="../treeclocks", features = ["serde"] }
tonic-build = "0.12.3"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
tracing = "0.1.41"
http-serde = "2.1.1"
anyhow = "1.0.97"
rand = "0.9.0"
thiserror = "2.0.12"
serde_json = { version = "1.0.140", optional = true }
serde_path_to_error = { version = "0.1.17", optional = true }

[dev-dependencies]
clap = { version = "4.5.35", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

[build-dependencies]
tonic-build = "0.12.3"

[features]
json=["serde_json", "serde_path_to_error"]
