[package]
name = "pollination"
version = "0.1.0"
readme = "../README.md"
edition = "2024"
authors = [
    "Byron Wasti <dev@byronwasti.com>"
]
categories = ["data-structures"]
keywords = ["raft", "crdt", "gossip", "distributed"]
description = "An experimental library exposing hybrid Raft and CRDT primitives."
homepage = "https://github.com/byronwasti/florescence"
license = "MIT OR Apache-2.0"
repository = "https://github.com/byronwasti/florescence"

[dependencies]
bincode = {version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2.0.12"
tracing = "0.1.41"
treeclocks = { version="0.6.0", path="../../treeclocks", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }

serde_json = { version = "1.0.140", optional = true }
serde_path_to_error = { version = "0.1.17", optional = true }

[dev-dependencies]
clap = { version = "4.5.35", features = ["derive"] }
insta = "1.43.1"
rand = "0.9.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

[build-dependencies]

[features]
json=["dep:serde_json", "dep:serde_path_to_error"]
