[package]
name = "pollination-simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
petgraph = { version = "0.8.3", features = ["serde-1"] }
#pollination = { path = "../pollination-core" }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.17"
uuid = "1.18.1"

[dev-dependencies]
insta = "1.46.0"
